2006-03-16 Zoran Vasiljevic <zv@archiware.com>

	*** 2.6.3 TAGGED FOR RELEASE (thread-2-6-3) ***

	* README: Bumped to 2.6.3

2006-03-15 Zoran Vasiljevic <zv@archiware.com>


	* configure.in: Changed BUILD_sample to
	BUILD_thread for Windows compile under MinGW.

	+ configure: regen

2006-03-14 Zoran Vasiljevic <zv@archiware.com>

	* configure.in: Moved to 2.6.3 release
	* configure: regen

2006-02-09 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSpCmd.c: fixed race condition when testing
	constraints (mutex being locked by the caller thread) when
	waiting on the condition variable. Also, fixed exclusive
	mutex ownership and usage counting.
	* configure.in: uses TEA 3.5 
	* tclconfig: updated to TEA3.5

2006-01-28 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSpCmd.c: Revamped handling because of the deep 
	* generic/threadSpCmd.h: race condition which resulted in
	* tests/thread.test:     deadlocks when using exclusive mutexes.

200i-10-15 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: channel transfer code cleans
	  ready-to-fire events from the thread event queue
	  prior to cutting the channel out of the interp.

	* tests/thread.test: allows channel transfer tests
	  for all Unices and Windows using Tcl 8.4.10+ core.

2005-09-23 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: ThreadDetach() sets the both
	  source and target thread ID's for the detached
	  channel to zero, thus signalizing the cleanup code
	  to leave the channel in the cleanup-list when the
 	  thread who detached it exits.

2005-08-24 Zoran Vasiljevic <zv@archiware.com>

	* generic/tclXkeylist.c: made some calls static
	  so they do not interfere for static linking with
          certain extensions.
 
2005-08-08 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSvCmd.c: fixed traversing the list
	  of registered object types in Sv_DuplicateObj()
	  (thx to eric.melbardis@netkitsolutions.com)

2005-07-27 Zoran Vasiljevic <zv@archiware.com>
